--- a/hipstagram/src/components/LoginForm/loginForm.module.css
+++ b/hipstagram/src/components/LoginForm/loginForm.module.css
@@ -5,13 +5,11 @@
     height: 100%;
 }
 
-h2 {
+.title {
     font-size: 30px;
-    font-weight: normal;
 }
 
-
-a {
+.link {
     text-decoration: none;
     color: #4D88ED;
 }
