--- a/hipstagram/src/components/Input/input.module.css
+++ b/hipstagram/src/components/Input/input.module.css
@@ -5,5 +5,5 @@
     height: 45px;
     border: 1px solid #C0BFBF;
     border-radius: 10px;
-    margin: 5px 10px 10px 0;
+    margin: 5px 10px 10px;
 }
